# demiboard

./: .gitignore  README.md  build.sh  start.sh
back/: Cargo.toml
back/src/: main.rs
back/src/config/: mod.rs
back/src/db/: mod.rs  model.rs
back/src/handlers/: error.rs  mod.rs  types.rs
back/src/util/: identity.rs  mod.rs  multipart.rs  sse_thread.rs
front/: .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
front/src/: App.vue  main.js
front/src/components/: Catalog.vue  Footer.vue  Header.vue  Main.vue  PostForm.vue  Thread.vue  ThreadPost.vue  ThreadPreview.vue
front/src/components/PostElements/: Code.vue  Post.vue  PostLink.vue  PostText.vue  Quote.vue  Spoiler.vue  TextFragment.tsx
front/src/router/: index.ts
front/src/types/: index.ts
front/src/util/: onMountedFetch.ts  postTokenizer.ts  useBoards.ts  useUpdatedThread.ts
vue-fontawesome/: index.es.js  index.js  package-lock.json  package.json
vue-fontawesome/src/: converter.js
vue-fontawesome/src/components/: FontAwesomeIcon.js
