[package]
name = "back"
version = "0.1.0"
authors = ["Muatra <muatra@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.1"
actix-multipart = "0.3.0-beta.1"
actix-rt = "1"
actix-service = "1"
actix-identity = "0.3.0-alpha.1"
sanitize-filename = "0.2"
sqlx = { version = "0.3", features = ["macros", "postgres", "time"] }
time = {version = "0.2", features = ["serde"] }
tokio = { version= "0.2", features = ["sync"] }
envconfig = "0.8"
envconfig_derive = "0.8"
lazy_static = "1"
colored = "1"
rand = "0.7"
num_cpus = "1"
futures = "0.3"
serde= {version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"